1、公共loading组件修改

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -671,7 +671,7 @@
     "100028": "not have right to op",
     "100029": "Email verified",
     "100030": "Invalid token for email verification",
-    "100031": "Email unverified",
+    "100031": "Email not activated",
     "100032": "Permission denied",
     "100033": "Invalid link",
     "100034": "Ad invalid",
@@ -680,7 +680,7 @@
     "100037": "Invalid email verify token",
     "100038": "Two-factor authentication required",
     "100039": "Login token invalid",
-    "100040": "Email address missing",
+    "100040": "Email address not found",
     "100041": "Withdraw fail",
     "100042": "Withdraw address code fail",
     "100043": "Wrong bank code",
