--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -671,7 +671,7 @@
     "100028": "not have right to op",
     "100029": "邮箱已验证",
     "100030": "无效的邮箱验证token",
-    "100031": "邮箱未验证",
+    "100031": "邮箱未激活",
     "100032": "没有权限",
     "100033": "无效的确认链接",
     "100034": "不是有效的广告",
@@ -680,7 +680,7 @@
     "100037": "无效的邮箱验证token",
     "100038": "需要二次验证",
     "100039": "登录token失效",
-    "100040": "邮箱地址未找到",
+    "100040": "邮箱地址不存在",
     "100041": "提现失败",
     "100042": "提现地址转码失败",
     "100043": "错误的银行账户",
