--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -523,10 +523,9 @@
     "ad_asset_deficiency": "資產不足",
     "ad_max_price_limit": "最大限額9999999999",
     "ad_deal_with_self": "您不可以和自己交易",
-    "ad_buying": "買",
-    "ad_selling": "賣",
     "ad_local_trading_tip": "當面交易需填寫含有地址信息的備註",
-    "user_phone_verify_tip": "驗證成功即送200 OMT"
+    "ad_buying": "買",
+    "ad_selling": "賣"
   },
   "order": {
     "remark_required": "請輸入訂單相關內容",
@@ -672,7 +671,7 @@
     "100028": "not have right to op",
     "100029": "郵箱已驗證",
     "100030": "無效的郵箱驗證token",
-    "100031": "郵箱未驗證",
+    "100031": "郵箱未激活",
     "100032": "沒有權限",
     "100033": "無效的確認鏈接",
     "100034": "不是有效的廣告",
@@ -681,7 +680,7 @@
     "100037": "無效的郵箱驗證token",
     "100038": "需要二次驗證",
     "100039": "登錄token失效",
-    "100040": "郵箱地址未找到",
+    "100040": "郵箱地址不存在",
     "100041": "提現失敗",
     "100042": "提現地址轉碼失敗",
     "100043": "錯誤的銀行賬戶",
