手机验证部分修改

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -21,6 +21,7 @@
     "add": "Add",
     "submit": "Submit",
     "complete": "Complete",
+    "reload": "Reload",
     "modify": "Modify",
     "update": "Update",
     "enable": "Enable",
