--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -21,6 +21,7 @@
     "add": "添加",
     "submit": "提交",
     "complete": "完成",
+    "reload": "重新加载",
     "modify": "修改",
     "update": "更新",
     "enable": "启用",
