1、谷歌验证添加 2、接口超时等错误情况修改

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -12,6 +12,7 @@
     "language": "Language",
     "register": "Register",
     "login": "Login",
+    "backLogin": "Back login",
     "success": "Success",
     "fail": "Fail",
     "loading": "Loading",
