1、交易首页的排版布局修改

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -13,6 +13,8 @@
     "register": "Register",
     "login": "Login",
     "backLogin": "Back login",
+    "trade": "Trade",
+    "me": "Me",
     "success": "Success",
     "fail": "Fail",
     "loading": "Loading",
