1、交易首页的列表数据接口部分添加

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -109,12 +109,6 @@
     "public_ad_title": "Free, Fast and Stable",
     "public_ad_info": "Enjoy the Crypto currency and Asset",
     "public_ad_go_adList": "See more advertisements",
-    "public_info_title_1": "Fast",
-    "public_info_title_2": "Safe and Stable",
-    "public_info_title_3": "Selected Asset",
-    "public_info_1": "Fast and easy P2P trading platform",
-    "public_info_2": "SSL and multiple bank-level encryption algorithm to provide you with the highest level of security",
-    "public_info_3": "Selected Crypto currency and Asset to satisfy you",
     "ads_request_fail": "Ads request fail",
     "url_request_fail": "request timeout",
     "url_notFound": "Url not exist",
@@ -141,10 +135,8 @@
     "invite_copy_success": "Copy success",
     "invite_people": "Invitation number",
     "invite_rankingList": "Ranking List",
-    "no_buy_dai_ad": "Currently no ad",
-    "no_sell_dai_ad": "Currently no ad",
-    "no_buy_eth_ad": "Currently no ad",
-    "no_sell_eth_ad": "Currently no ad",
+    "no_sell_ad": "Currently no ad for {0}",
+    "no_buy_ad": "Currently no ad for {0}",
     "no_complete_order": "Currently no order",
     "no_unfinished_order": "Currently no order",
     "no_underway_ad": "Currently no ad",
@@ -495,6 +487,7 @@
     "ad_local_trading_tip": "To fill in the remark with address information in a face to face transaction"
   },
   "order": {
+    "order_unit": "Unit({0})",
     "remark_required": "Please enter the order related content",
     "order_unfinished": "Processing",
     "order_finished": "Completed",
