--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -109,12 +109,6 @@
     "public_ad_title": "自由交易 极速买卖",
     "public_ad_info": "开启您的财务自由之路",
     "public_ad_go_adList": "进入广告列表",
-    "public_info_title_1": "极速交易",
-    "public_info_title_2": "安全稳定",
-    "public_info_title_3": "臻选资产",
-    "public_info_1": "优选交易方，纯粹点对点交易",
-    "public_info_2": "SSL，冷存储，多重签名保障交易及资产安全",
-    "public_info_3": "优选热门明星币种及资产，更懂您的需求",
     "ads_request_fail": "广告数据获取失败",
     "url_request_fail": "请求超时",
     "url_notFound": "请求的地址不存在",
@@ -141,10 +135,8 @@
     "invite_copy_success": "复制成功",
     "invite_people": "邀请人数",
     "invite_rankingList": "邀请好友排行榜",
-    "no_buy_dai_ad": "没有购买 DAI 的广告",
-    "no_sell_dai_ad": "没有出售 DAI 的广告",
-    "no_buy_eth_ad": "没有购买 ETH 的广告",
-    "no_sell_eth_ad": "没有出售 ETH 的广告",
+    "no_sell_ad": "没有购买 {0} 的广告",
+    "no_buy_ad": "没有出售 {0} 的广告",
     "no_complete_order": "您没有未完成的订单",
     "no_unfinished_order": "您没有未完成的订单",
     "no_underway_ad": "您没有进行中的广告",
@@ -495,6 +487,7 @@
     "ad_local_trading_tip": "当面交易需填写含有地址信息的备注"
   },
   "order": {
+    "order_unit": "单位({0})",
     "remark_required": "请输入订单相关内容",
     "order_unfinished": "未完成订单",
     "order_finished": "已完成订单",
