--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -109,12 +109,6 @@
     "public_ad_title": "自由交易 極速買賣",
     "public_ad_info": "開啟您的財務自由之路",
     "public_ad_go_adList": "進入廣告列表",
-    "public_info_title_1": "極速交易",
-    "public_info_title_2": "安全穩定",
-    "public_info_title_3": "臻選資產",
-    "public_info_1": "優選交易方，純粹點對點交易",
-    "public_info_2": "SSL，冷存儲，多重簽名保障交易及資產安全",
-    "public_info_3": "優選熱門明星幣種及資產，更懂您的需求",
     "ads_request_fail": "廣告數據獲取失敗",
     "url_request_fail": "請求超時",
     "url_notFound": "請求的地址不存在",
@@ -141,10 +135,8 @@
     "invite_copy_success": "復制成功",
     "invite_people": "邀請人數",
     "invite_rankingList": "邀請好友排行榜",
-    "no_buy_dai_ad": "沒有購買 DAI 的廣告",
-    "no_sell_dai_ad": "沒有出售 DAI 的廣告",
-    "no_buy_eth_ad": "沒有購買 ETH 的廣告",
-    "no_sell_eth_ad": "沒有出售 ETH 的廣告",
+    "no_sell_ad": "没有购买 {0} 的广告",
+    "no_buy_ad": "没有出售 {0} 的广告",
     "no_complete_order": "您沒有未完成的訂單",
     "no_unfinished_order": "您沒有未完成的訂單",
     "no_underway_ad": "您沒有進行中的廣告",
@@ -495,6 +487,7 @@
     "ad_selling": "賣"
   },
   "order": {
+    "order_unit": "單位({0})",
     "remark_required": "請輸入訂單相關內容",
     "order_unfinished": "未完成訂單",
     "order_finished": "已完成訂單",
