--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -487,7 +487,7 @@
     "ad_local_trading_tip": "当面交易需填写含有地址信息的备注"
   },
   "order": {
-    "order_unit": "单位({0})",
+    "order_unit_price": "单价({0})",
     "remark_required": "请输入订单相关内容",
     "order_unfinished": "未完成订单",
     "order_finished": "已完成订单",
