--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -487,7 +487,7 @@
     "ad_selling": "賣"
   },
   "order": {
-    "order_unit": "單位({0})",
+    "order_unit_price": "單價({0})",
     "remark_required": "請輸入訂單相關內容",
     "order_unfinished": "未完成訂單",
     "order_finished": "已完成訂單",
