--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -199,6 +199,7 @@
     "login_success": "登录成功",
     "login_auth": "二次验证",
     "login_toRegister": "前往注册",
+    "auth_email": "验证邮件",
     "auth_email_send": "发送验证邮件",
     "auth_email_send_success": "发送验证邮件成功",
     "auth_email_send_fail": "发送验证邮件失败",
