--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -199,6 +199,7 @@
     "login_success": "登錄成功",
     "login_auth": "二次驗證",
     "login_toRegister": "前往註冊",
+    "auth_email": "驗證郵件",
     "auth_email_send": "發送驗證郵件",
     "auth_email_send_success": "發送驗證郵件成功",
     "auth_email_send_fail": "發送驗證郵件失敗",
