--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -46,6 +46,7 @@
     "required": "Required",
     "label": "Label",
     "about": "About",
+    "about_us": "About us",
     "explain": "Fee",
     "question": "FAQ",
     "helpCenter": "Help",
