--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -46,6 +46,7 @@
     "required": "必填",
     "label": "标签",
     "about": "关于",
+    "about_us": "关于我们",
     "explain": "费率说明",
     "question": "常见问题",
     "helpCenter": "帮助中心",
