--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -46,6 +46,7 @@
     "required": "必填",
     "label": "標簽",
     "about": "關於",
+    "about_us": "關於我們",
     "explain": "費率說明",
     "question": "常見問題",
     "helpCenter": "幫助中心",
