添加收款方式页面添加

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -264,6 +264,7 @@
     "default": "Default",
     "default_notValid": "Set default",
     "receivables": "Transaction account",
+    "receivables_add": "Add transaction account",
     "default_receivables": "Default transaction account",
     "default_receivables_add": "Add default transaction account",
     "receivables_request_fail": "Transaction account list request fail",
