添加银行卡页面修改

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -278,7 +278,9 @@
     "receivables_del_fail": "Delete fail",
     "receivables_set_default_success": "Default set success",
     "receivables_set_default_fail": "Default set fail",
+    "alipay_add": " Add Alipay",
     "alipay_account": "Alipay account",
+    "alipay_reAccount": "Confirm account",
     "alipay_title": "Alipay",
     "alipay_userName": "Alipay account name",
     "alipay_userName_required": "Enter the name for alipay account",
@@ -286,11 +288,16 @@
     "alipay_reAccount_required": "Enter your alipay account again",
     "alipay_account_different": "Alipay account not match",
     "alipay_add_notValid": "Account invalid",
+    "bankCard_add": "Add bank Card",
     "bankCard_title_1": "Bank Card",
     "bankCard_title_2": "Add new bank card",
+    "bankCard_userName": "Name",
     "bankCard_userName_required": "Enter your name for bank card",
-    "bankCard_bank_required": "请输入您的银行卡所对应的银行名称",
+    "bankCard_bank_select": "Select Bank",
+    "bankCard_bank_required": "Enter bank card No",
+    "bankCard_number": "Bank card No",
     "bankCard_number_required": "Enter bank card No",
+    "bankCard_reNumber": "Confirm card No",
     "bankCard_reNumber_required": "Enter bank card No again",
     "bankCard_number_different": "Card No not match",
     "bankCard_number_invalid": "Invalid card NO",
