--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -278,7 +278,9 @@
     "receivables_del_fail": "删除失败",
     "receivables_set_default_success": "设置成功",
     "receivables_set_default_fail": "设置失败",
+    "alipay_add": "添加支付宝",
     "alipay_account": "支付宝账号",
+    "alipay_reAccount": "确认账号",
     "alipay_title": "使用支付宝",
     "alipay_userName": "支付宝用户名",
     "alipay_userName_required": "请输入您的支付宝账号对应的用户名",
@@ -286,11 +288,16 @@
     "alipay_reAccount_required": "请再次输入您的支付宝账号",
     "alipay_account_different": "两次输入的支付宝账号不一致",
     "alipay_add_notValid": "请输入正确的支付宝信息",
+    "bankCard_add": "添加银行卡",
     "bankCard_title_1": "使用银行卡",
     "bankCard_title_2": "添加银行卡卡号",
+    "bankCard_userName": "收款姓名",
     "bankCard_userName_required": "请输入您的银行卡姓名",
+    "bankCard_bank_select": "选择银行",
     "bankCard_bank_required": "请输入您的银行卡所对应的银行名称",
+    "bankCard_number": "银行卡号",
     "bankCard_number_required": "请输入您的银行卡卡号",
+    "bankCard_reNumber": "确认卡号",
     "bankCard_reNumber_required": "请再次输入您的银行卡卡号",
     "bankCard_number_different": "两次输入的银行卡卡号不一致",
     "bankCard_number_invalid": "无效的银行卡号",
