--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -278,7 +278,9 @@
     "receivables_del_fail": "刪除失敗",
     "receivables_set_default_success": "設置成功",
     "receivables_set_default_fail": "設置失敗",
+    "alipay_add": "添加支付寶",
     "alipay_account": "支付寶賬號",
+    "alipay_reAccount": "確認賬號",
     "alipay_title": "使用支付寶",
     "alipay_userName": "支付寶用戶名",
     "alipay_userName_required": "請輸入您的支付寶賬號對應的用戶名",
@@ -286,11 +288,16 @@
     "alipay_reAccount_required": "請再次輸入您的支付寶賬號",
     "alipay_account_different": "兩次輸入的支付寶賬號不一致",
     "alipay_add_notValid": "請輸入正確的支付寶信息",
+    "bankCard_add": "添加銀行卡",
     "bankCard_title_1": "使用銀行卡",
     "bankCard_title_2": "添加銀行卡卡號",
+    "bankCard_userName": "收款姓名",
     "bankCard_userName_required": "請輸入您的銀行卡姓名",
+    "bankCard_bank_select": "選擇銀行",
     "bankCard_bank_required": "請輸入您的銀行卡所對應的銀行名稱",
+    "bankCard_number": "銀行卡號",
     "bankCard_number_required": "請輸入您的銀行卡卡號",
+    "bankCard_reNumber": "確認卡號",
     "bankCard_reNumber_required": "請再次輸入您的銀行卡卡號",
     "bankCard_number_different": "兩次輸入的銀行卡卡號不一致",
     "bankCard_number_invalid": "無效的銀行卡號",
