--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -32,6 +32,7 @@
     "cancel": "Cancel",
     "operation": "Operation",
     "info": "Detail",
+    "delete": "Delete",
     "confirm_delete": "Are you sure to delete？",
     "time": "time",
     "second": "second",
