--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -32,6 +32,7 @@
     "cancel": "取消",
     "operation": "操作",
     "info": "详情",
+    "delete": "删除",
     "confirm_delete": "确认删除？",
     "time": "时间",
     "second": "秒",
