--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -32,6 +32,7 @@
     "cancel": "取消",
     "operation": "操作",
     "info": "詳情",
+    "delete": "刪除",
     "confirm_delete": "確認刪除？",
     "time": "時間",
     "second": "秒",
