--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -678,6 +678,7 @@
     "alipay_account_range": "支付寶帳號長度應該介於 4-40 之間",
     "card_holder_range": "銀行卡帳戶長度應該介於 2-20 之間",
     "card_number_range": "銀行卡卡號長度應該介於 16-19 之間",
+    "password_range": "6-100位, 包含字母和數字",
     "address_label": "必須2-16個字元",
     "max_length": "字數不得超過{0}",
     "must_be_number": "必須是數位"
