添加谷歌验证的首页

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -245,10 +245,12 @@
     "auth_google_fail": "Google authentication fail",
     "auth_google_add_fail": "Enable google authentication fail",
     "auth_google_del_fail": "Disable google authentication fail",
+    "add_auth_google_step1": "Step 1",
+    "add_auth_google_step2": "Step 2",
     "add_auth_google_download": "Download Google authentication",
     "add_auth_google_scan": "Scan QR code with google authentication",
     "add_auth_google_saveKey": "Please keep the key properly",
-    "add_auth_google_keyInfo": "is your key for google authentication, please keep it properly",
+    "add_auth_google_keyInfo": "Click to copy your key. This key is used to retrieve the Google validator. Please keep it properly.",
     "add_auth_google_commit": "Already keep the key, next",
     "userCenter": "User center",
     "info": "Basic information",
