--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -245,10 +245,12 @@
     "auth_google_fail": "谷歌驗證失敗",
     "auth_google_add_fail": "啟用谷歌驗證失敗",
     "auth_google_del_fail": "停用谷歌驗證失敗",
+    "add_auth_google_step1": "第一步",
+    "add_auth_google_step2": "第二步",
     "add_auth_google_download": "下載谷歌驗證App",
     "add_auth_google_scan": "用谷歌App掃描二維碼",
     "add_auth_google_saveKey": "請妥善保存密匙",
-    "add_auth_google_keyInfo": "是您的密鑰 ，用於找回谷歌驗證器，請妥善保存。",
+    "add_auth_google_keyInfo": "點擊可以復制您的密鑰，此密匙用於找回谷歌驗證器，請妥善保存",
     "add_auth_google_commit": "我已備份密匙，下一步",
     "userCenter": "個人中心",
     "info": "基本信息",
