--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -245,10 +245,12 @@
     "auth_google_fail": "谷歌验证失败",
     "auth_google_add_fail": "启用谷歌验证失败",
     "auth_google_del_fail": "停用谷歌验证失败",
+    "add_auth_google_step1": "第一步",
+    "add_auth_google_step2": "第二步",
     "add_auth_google_download": "下载谷歌验证App",
     "add_auth_google_scan": "用谷歌App扫描二维码",
     "add_auth_google_saveKey": "请妥善保存密匙",
-    "add_auth_google_keyInfo": "是您的密钥 ，用于找回谷歌验证器，请妥善保存。",
+    "add_auth_google_keyInfo": "点击可以复制您的密钥，此密匙用于找回谷歌验证器，请妥善保存",
     "add_auth_google_commit": "我已备份密匙，下一步",
     "userCenter": "个人中心",
     "info": "基本信息",
