1、邀请页面 2、部分页面优化修改

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -344,9 +344,11 @@
     "asset_balance": "Available",
     "asset_locked": "Locked",
     "asset_recharge_address_get": "Get withdraw address",
+    "asset_recharge_address_get_tip": "You haven't repaid the address, click the button to generate a deposit address.",
     "asset_recharge_address": "Receive address",
     "asset_recharge_address_tip_ETH": "Reminder：Send only ETH to the deposit address. Sending any other currency to the ETH address will result in the loss of your deposit.  Receive ETH on a ETH network need some time. We will deposit your ETH after we have received {0} confirmation(s) from the ETH Network. <span style='color: red'>The minimum deposit amount is {1} ETH</span>, we will not handle any deposit request that is less than this amount. Please do not send your fund with smart contract, or it won't be accepted.",
     "asset_recharge_address_tip": "Reminder: Send only {2} to the deposit address. Sending any other currency to the {2} address will result in the loss of your deposit.  Receive {2} on a {2} network need some time. <span style='color: red'>The minimum deposit amount is {1} {2}</span>, we will not handle any deposit request that is less than this amount. ",
+    "asset_withdraw_and_recharge_history": "Recharge and withdraw record",
     "asset_recharge_time": "Deposit time",
     "asset_withdraw_time": "Withdraw time",
     "asset_number": "Amount",
