--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -344,9 +344,11 @@
     "asset_balance": "可用资产",
     "asset_locked": "冻结资产",
     "asset_recharge_address_get": "获取接收地址",
+    "asset_recharge_address_get_tip": "您还没有充值地址，点击生产充值地址",
     "asset_recharge_address": "接收地址",
     "asset_recharge_address_tip_ETH": "提示：ETH 地址只能充值 ETH 资产，任何充入 ETH 地址的非 ETH 资产将不可找回。 ETH 充值需要时间，我们会在收到 ETH 网络 {0} 个确认后给您入账，到账您将收到邮件通知。<span style='color: red'>最低存入金额为 {1} ETH</span> ，我们不会处理少于该金额的 ETH 存入请求。OTCMAKER暂不支持 ETH 智能合约（如bitstamp）的转入。",
     "asset_recharge_address_tip": "提示：{2} 地址只能充值 {2} 资产，任何充入 {2} 地址的非 {2} 资产将不可找回。 {2} 充值需要时间，我们会在收到 {2} 网络 {0} 个确认后给您入账，到账您将收到邮件通知。<span style='color: red'>最低存入金额为 {1} {2}</span>，我们不会处理少于该金额的 {2} 存入请求。",
+    "asset_withdraw_and_recharge_history": "充值提现记录",
     "asset_recharge_time": "充值时间",
     "asset_withdraw_time": "提现时间",
     "asset_number": "数量",
