--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -133,7 +133,7 @@
     "invite_invited": "已邀请",
     "invite_omt": "已获得OMT",
     "invite_rules": "活动细则",
-    "invite_rules_content": "1. 在本页中点击「图片邀请」或「复制文字」分享好友或朋友圈。<br/>2. 好友通过您的邀请链接注册并完成手机验证即为成功邀请，同一用户仅能被邀请一次。<br/>3. 每成功邀请一位好友（注册并验证）即得200 OMT；每成功邀请八位好友另得10 DAI（1DAI=1美元），总计600 DAI发完即止；邀请人数第一名获得1ETH；第二名获得0.5ETH；第三名获得0.2ETH。<br/>4. 活动时间：5月 22日16点至5月31日16点。<br/>5. 活动结束后三个工作日内，您可以在资产页面查看您获得的奖励。<br/>6. OTCMAKER 保留对本活动的最终修改解释权。",
+    "invite_rules_content": "1. 在本页中「复制文字」分享给好友或朋友圈。<br>2. 好友通过您的邀请链接注册并完成手机验证，将会计入邀请人数。<br>3. 每邀请一位好友，您将获得 200 OMT，后续将根据实际情况对奖励比例进行调整。<br>4. 您可以在资产页面查看您获得的OMT。<br>5. 同一用户仅能被邀请一次。<br>6. OTCMAKER 保留对本活动的最终修改解释权。",
     "invite_copy_success": "复制成功",
     "invite_people": "邀请人数",
     "invite_rankingList": "邀请好友排行榜",
