--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -133,7 +133,7 @@
     "invite_invited": "已邀請",
     "invite_omt": "已獲得OMT",
     "invite_rules": "活動細則",
-    "invite_rules_content": "1. 在本頁中點擊「圖片邀請」或「復制文字」分享好友或朋友圈。<br/>2. 好友通過您的邀請鏈接註冊並完成手機驗證即為成功邀請，同壹用戶僅能被邀請壹次。<br/>3. 每成功邀請壹位好友（註冊並驗證）即得200 OMT；每成功邀請八位好友另得10 DAI（1DAI=1美元），總計600 DAI發完即止；邀請人數第壹名獲得1ETH；第二名獲得0.5ETH；第三名獲得0.2ETH。<br/>4. 活動時間：5月 22日16點至5月31日16點。<br/>5. 活動結束後三個工作日內，您可以在資產頁面查看您獲得的獎勵。<br/>6. OTCMAKER 保留對本活動的最終修改解釋權。",
+    "invite_rules_content": "1. 在本頁中「復制文字」分享給好友或朋友圈。<br>2. 好友通過您的邀請鏈接註冊並完成手機驗證，將會計入邀請人數。<br>3. 每邀請一位好友，您將獲得 200 OMT，後續將根據實際情況對獎勵比例進行調整。<br>4. 您可以在資產頁面查看您獲得的OMT。<br>5. 同一用戶僅能被邀請一次。<br>6. OTCMAKER 保留對本活動的最終修改解釋權。",
     "invite_copy_success": "復制成功",
     "invite_people": "邀請人數",
     "invite_rankingList": "邀請好友排行榜",
