1、资产提现确认，提现二次验证

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -349,6 +349,9 @@
     "asset_recharge_address_tip_ETH": "Reminder：Send only ETH to the deposit address. Sending any other currency to the ETH address will result in the loss of your deposit.  Receive ETH on a ETH network need some time. We will deposit your ETH after we have received {0} confirmation(s) from the ETH Network. <span style='color: red'>The minimum deposit amount is {1} ETH</span>, we will not handle any deposit request that is less than this amount. Please do not send your fund with smart contract, or it won't be accepted.",
     "asset_recharge_address_tip": "Reminder: Send only {2} to the deposit address. Sending any other currency to the {2} address will result in the loss of your deposit.  Receive {2} on a {2} network need some time. <span style='color: red'>The minimum deposit amount is {1} {2}</span>, we will not handle any deposit request that is less than this amount. ",
     "asset_withdraw_and_recharge_history": "Recharge and withdraw record",
+    "asset_withdraw_and_recharge_history_currency": "Recharge and withdraw record for {0}",
+    "asset_recharge_history": "Recharge record",
+    "asset_withdraw_history": "Withdraw record",
     "asset_recharge_time": "Deposit time",
     "asset_withdraw_time": "Withdraw time",
     "asset_number": "Amount",
@@ -409,6 +412,7 @@
     "asset_withdraw_address_invalid": "Invalid withdraw address",
     "asset_withdraw_email": "Please confirm the withdraw request by clicking link in email",
     "asset_withdraw_email_success": "Resend success",
+    "asset_withdraw_email_fail": "Resend fail",
     "asset_recharge_email_no_Auth": "You have not yet verified the mailbox and cannot recharge the {0}",
     "asset_withdraw_email_no_Auth": "You have not yet verified the mailbox and cannot withdraw the {0}",
     "asset_go_email_auth": "Go to verification",
