--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -349,6 +349,9 @@
     "asset_recharge_address_tip_ETH": "提示：ETH 地址只能充值 ETH 資產，任何充入 ETH 地址的非 ETH 資產將不可找回。 ETH 充值需要時間，我們會在收到 ETH 網絡 {0} 個確認後給您入賬，到賬您將收到郵件通知。<span style='color: red'>最低存入金額為 {1} ETH</span>，我們不會處理少於該金額的 ETH 存入請求。OTCMAKER暫不支持 ETH 智能合約（如bitstamp）的轉入。",
     "asset_recharge_address_tip": "提示：{2} 地址只能充值 {2} 資產，任何充入 {2} 地址的非 {2} 資產將不可找回。 {2} 充值需要時間，我們會在收到 {2} 網絡 {0} 個確認後給您入賬，到賬您將收到郵件通知。<span style='color: red'>最低存入金額為 {1} {2}</span>，我們不會處理少於該金額的 {2} 存入請求。",
     "asset_withdraw_and_recharge_history": "充值提現記錄",
+    "asset_withdraw_and_recharge_history_currency": "{0} 充值提現記錄",
+    "asset_recharge_history": "充值記錄",
+    "asset_withdraw_history": "提現記錄",
     "asset_recharge_time": "充值時間",
     "asset_withdraw_time": "提現時間",
     "asset_number": "數量",
@@ -409,6 +412,7 @@
     "asset_withdraw_address_invalid": "無效的提現地址",
     "asset_withdraw_email": "請點擊郵件中的鏈接確認本次提現申請",
     "asset_withdraw_email_success": "重發成功",
+    "asset_withdraw_email_fail": "重發失敗",
     "asset_recharge_email_no_Auth": "您尚未驗證郵箱，無法充值{0}",
     "asset_withdraw_email_no_Auth": "您尚未驗證郵箱，無法提現{0}",
     "asset_go_email_auth": "前往驗證",
