交易详情页及弹窗页面

--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -564,8 +564,8 @@
     "order_info_notValid": "请正确填写交易信息",
     "order_place_order_confirm": "下单确认",
     "order_join_own_otc_ad": "您不可以与自己交易",
-    "order_place_order_buy_warn": "提醒：请确认价格后再下单，下单后此交易的 DAI 将托管锁定，请放心购买",
-    "order_place_order_sell_warn": "提醒：请确认价格后再下单，下单后此交易的 DAI 将托管锁定，请放心出售",
+    "order_place_order_buy_warn": "提醒：请确认价格后再下单，下单后此交易的 {0} 将托管锁定，请放心购买",
+    "order_place_order_sell_warn": "提醒：请确认价格后再下单，下单后此交易的 {0} 将托管锁定，请放心出售",
     "order_deal_request_fail": "交易请求失败",
     "order_deal_status_pay": "订单已生成",
     "order_deal_status_wait_payment": "等待买家付款",
