--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -564,8 +564,8 @@
     "order_info_notValid": "請正確填寫交易信息",
     "order_place_order_confirm": "下單確認",
     "order_join_own_otc_ad": "您不可以與自己交易",
-    "order_place_order_buy_warn": "提醒：請確認價格後再下單，下單後此交易的 DAI 將托管鎖定，請放心購買",
-    "order_place_order_sell_warn": "提醒：請確認價格後再下單，下單後此交易的 DAI 將托管鎖定，請放心出售",
+    "order_place_order_buy_warn": "提醒：請確認價格後再下單，下單後此交易的 {0} 將托管鎖定，請放心購買",
+    "order_place_order_sell_warn": "提醒：請確認價格後再下單，下單後此交易的 {0} 將托管鎖定，請放心出售",
     "order_deal_request_fail": "交易請求失敗",
     "order_deal_status_pay": "訂單已生成",
     "order_deal_status_wait_payment": "等待買家付款",
