--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -510,6 +510,7 @@
     "ad_local_trading_tip": "To fill in the remark with address information in a face to face transaction"
   },
   "order": {
+    "order_detail": "Order detail",
     "order_unit_price": "Unit price ({0})",
     "remark_required": "Please enter the order related content",
     "order_unfinished": "Processing",
