1、部分可以滑动的页面布局样式修改 2、聊天窗口样式修改 3、订单状态样式的判断修改，未完成的订单改为红色

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -628,7 +628,8 @@
     "order_chat_img": "Chat image",
     "order_chat_send_msg_fail": "Message sending failure",
     "order_chat_type_nonsupport": "Unsupport message type",
-    "order_data_request_fail": "Oder data request fail"
+    "order_data_request_fail": "Oder data request fail",
+    "order_chat_placeholder": "Say something"
   },
   "request": {
     "100000": "Server error",
